--- a/templates/post.html
+++ b/templates/post.html
@@ -40,7 +40,7 @@
                 <!--           Comments Area -->
 
                 {{ ckeditor.load() }}
-                {{ ckeditor.config(name='comment_text') }}
+                {{ ckeditor.config(name='text') }}
                 {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
 
 
@@ -49,11 +49,11 @@
                     <ul class="commentList">
                         <li>
                             <div class="commenterImage">
-                                <img src="{{ comment.comment_author.email | gravatar }}"/>
+                                <img src="{{ comment.author.email | gravatar }}"/>
                             </div>
                             <div class="commentText">
                                 {{comment.text|safe}}
-                                <span class="date sub-text">{{comment.comment_author.name}}</span>
+                                <span class="date sub-text">{{comment.author.name}}</span>
 
                             </div>
                         </li>
